#commit Updated user Model, db config

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-MASNGO_URL=abc
+MONGO_URI=abc
 TOKEN_SECRET=chaiAurCode
-DOMIN= http://localhost:3000
+DOMAIN= http://localhost:3000
 
 # https://www.youtube.com/watch?v=MeGbbXGc4ts
